--- a/css/gallerie.css
+++ b/css/gallerie.css
@@ -1,4 +1,3 @@
-/* Universal Styles */
 * {
   box-sizing: border-box;
 }
@@ -7,30 +6,34 @@
   box-sizing: border-box;
 }
 
-/* Styles for larger screens (greater than 1024px) */
 @media (min-width: 1025px) {
   .gallery {
     padding: 0 0 4rem 0;
   }
-  .img-container {
-    width: 100%;
-    height: 500px;
-    cursor: pointer;
-    overflow: hidden;
-  }
-  .img-container:hover .img-content-hover {
-    display: block;
-  }
-  .image-text {
-    width: 100%;
-    text-align: center;
-    margin-top: 6rem;
+  .grid {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
     margin-bottom: 2rem;
+    margin-top: 7rem;
+  }
+  .column {
+    flex: 1;
+    min-width: calc(25% - 1rem); /* Each image will take up 25% of the container width minus the gap. */
+  }
+  .img-container {
+    position: relative;
+    width: 100%;
+    padding-bottom: 100%; /* Maintain a square aspect ratio */
+    overflow: hidden;
+    border: 1px solid #ccc; /* This draws the separating lines between the images */
   }
   img {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    height: 500px;
-    margin-bottom: 1rem;
+    height: 100%;
     -o-object-fit: cover;
        object-fit: cover;
     transform: scale(1);
@@ -39,39 +42,7 @@
   img:hover {
     transform: scale(1.05);
   }
-  .img-content-hover {
-    z-index: 1;
-    position: absolute;
-    top: 0;
-    left: 0;
-    white-space: nowrap;
-    display: none;
-    padding: 1rem;
-    background: white;
-    font-weight: 400;
-    margin-top: 1.25rem;
-    margin-left: -2rem;
-  }
-  .title {
-    color: black;
-    font-size: 1.5rem;
-    font-weight: 700;
-  }
-  .category {
-    font-size: 1rem;
-    color: gray;
-  }
-  .img-content {
-    display: none;
-  }
-  .social, .copyright {
-    margin: 1rem;
-  }
-  .social li {
-    display: inline-block;
-  }
 }
-/* Adjustments for tablet and mobile landscape */
 @media (min-width: 835px) and (max-width: 1024px) {
   .img-container {
     height: 400px;
@@ -84,7 +55,6 @@
     height: 400px;
   }
 }
-/* Adjustments for small tablets */
 @media (min-width: 770px) and (max-width: 834px) {
   .img-container {
     height: 350px;
@@ -97,7 +67,6 @@
     height: 350px;
   }
 }
-/* Adjustments for big phones */
 @media (min-width: 577px) and (max-width: 769px) {
   .img-container {
     height: 300px;
