--- a/css/gallerie.scss
+++ b/css/gallerie.scss
@@ -1,5 +1,3 @@
-/* Universal Styles */
-
 * {
     box-sizing: border-box;
 }
@@ -8,83 +6,49 @@
     box-sizing: border-box;
 }
 
-/* Styles for larger screens (greater than 1024px) */
 
 @media (min-width: 1025px) {
     .gallery {
       padding: 0 0 4rem 0;
     }
 
-    .img-container {
-      width: 100%;
-      height: 500px;
-      cursor: pointer;
-      overflow: hidden;
-
-      &:hover .img-content-hover {
-        display: block;
-      }
+    .grid {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 1rem;
+        margin-bottom: 2rem;
+        margin-top: 7rem;
     }
 
-    .image-text {
+    .column {
+        flex: 1;
+        min-width: calc(25% - 1rem); /* Each image will take up 25% of the container width minus the gap. */
+    }
+
+    .img-container {
+        position: relative;
         width: 100%;
-        text-align: center;
-        margin-top: 6rem;
-        margin-bottom: 2rem;
+        padding-bottom: 100%; /* Maintain a square aspect ratio */
+        overflow: hidden;
+        border: 1px solid #ccc; /* This draws the separating lines between the images */
     }
 
     img {
-      width: 100%;
-      height: 500px;
-      margin-bottom: 1rem;
-      object-fit: cover;
-      transform: scale(1);
-      transition: all 0.3s ease-in-out;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        transform: scale(1);
+        transition: all 0.3s ease-in-out;
 
-      &:hover {
-        transform: scale(1.05);
-      }
-    }
-
-    .img-content-hover {
-      z-index: 1;
-      position: absolute;
-      top: 0;
-      left: 0;
-      white-space: nowrap;
-      display: none;
-      padding: 1rem;
-      background: white;
-      font-weight: 400;
-      margin-top: 1.25rem;
-      margin-left: -2rem;
-    }
-
-    .title {
-      color: black;
-      font-size: 1.5rem;
-      font-weight: 700;
-    }
-
-    .category {
-      font-size: 1rem;
-      color: gray;
-    }
-
-    .img-content {
-      display: none;
-    }
-
-    .social, .copyright {
-      margin: 1rem;
-    }
-
-    .social li {
-      display: inline-block;
+        &:hover {
+            transform: scale(1.05);
+        }
     }
 }
 
-/* Adjustments for tablet and mobile landscape */
   
 @media (min-width: 835px) and (max-width: 1024px) {
     .img-container {
@@ -100,8 +64,6 @@
         height: 400px;  // match the container height
     }
 }
-
-/* Adjustments for small tablets */
   
 @media (min-width: 770px) and (max-width: 834px) {
     .img-container {
@@ -117,8 +79,6 @@
         height: 350px;  // match the container height
     }
 }
-
-/* Adjustments for big phones */
   
 @media (min-width: 577px) and (max-width: 769px) {
     .img-container {
@@ -134,7 +94,6 @@
         height: 300px;  // match the container height
     }
 }
-
 
 @media (max-width: 576px) {
     img:hover {
