--- a/css/main.css
+++ b/css/main.css
@@ -119,7 +119,7 @@
     padding-top: 12%;
     height: 10rem;
     margin-top: 2rem;
-    margin-bottom: 8rem;
+    margin-bottom: 12rem;
     text-align: center;
     font-size: 1rem;
     color: black;
@@ -142,6 +142,106 @@
     font-weight: bolder;
     font-size: 1.7rem;
     margin-left: 2rem;
+  }
+  .social {
+    height: 8rem;
+    z-index: 1;
+    position: relative;
+  }
+  .social ul {
+    position: relative;
+    top: 130%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0;
+    padding: 0;
+    display: flex;
+  }
+  .social ul li {
+    list-style: none;
+  }
+  .social ul li a {
+    display: block;
+    position: relative;
+    width: 35px;
+    height: 35px;
+    line-height: 35px;
+    font-size: 15px;
+    text-align: center;
+    text-decoration: none;
+    color: white;
+    margin: 0 8px;
+    transition: 0.5s;
+  }
+  .social ul li a span {
+    position: absolute;
+    transition: transform 0.5s;
+  }
+  .social ul li a span:nth-child(1), .social ul li a span:nth-child(3) {
+    width: 100%;
+    height: 3px;
+    background: white;
+  }
+  .social ul li a span:nth-child(1) {
+    top: 0;
+    left: 0;
+    transform-origin: right;
+  }
+  .social ul li a span:nth-child(3) {
+    bottom: 0;
+    left: 0;
+    transform-origin: left;
+  }
+  .social ul li a span:nth-child(2), .social ul li a span:nth-child(4) {
+    width: 3px;
+    height: 100%;
+    background: #404040;
+  }
+  .social ul li a span:nth-child(2) {
+    top: 0;
+    left: 0;
+    transform: scale(0);
+    transform-origin: bottom;
+  }
+  .social ul li a span:nth-child(4) {
+    top: 0;
+    right: 0;
+    transform: scale(0);
+    transform-origin: top;
+  }
+  .social ul li a:hover span:nth-child(1) {
+    transform: scaleX(0);
+    transform-origin: left;
+  }
+  .social ul li a:hover span:nth-child(3) {
+    transform: scaleX(0);
+    transform-origin: right;
+  }
+  .social ul li a:hover span:nth-child(2) {
+    transform: scale(1);
+    transform-origin: top;
+  }
+  .social ul li a:hover span:nth-child(4) {
+    transform: scale(1);
+    transform-origin: bottom;
+  }
+  .social ul li .facebook:hover {
+    color: #3b5998;
+  }
+  .social ul li .facebook:hover span {
+    background: #3b5998;
+  }
+  .social ul li .instagram:hover {
+    color: #c32aa3;
+  }
+  .social ul li .instagram:hover span {
+    background: #c32aa3;
+  }
+  .social ul li .linkedin:hover {
+    color: #0077b5;
+  }
+  .social ul li .linkedin:hover span {
+    background: #0077b5;
   }
   .spacer1 {
     width: 100%;
@@ -284,6 +384,106 @@
     font-size: 2rem;
     margin-left: 2rem;
   }
+  .social {
+    height: 8rem;
+    z-index: 1;
+    position: relative;
+  }
+  .social ul {
+    position: relative;
+    top: 130%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0;
+    padding: 0;
+    display: flex;
+  }
+  .social ul li {
+    list-style: none;
+  }
+  .social ul li a {
+    display: block;
+    position: relative;
+    width: 35px;
+    height: 35px;
+    line-height: 35px;
+    font-size: 15px;
+    text-align: center;
+    text-decoration: none;
+    color: white;
+    margin: 0 20px;
+    transition: 0.5s;
+  }
+  .social ul li a span {
+    position: absolute;
+    transition: transform 0.5s;
+  }
+  .social ul li a span:nth-child(1), .social ul li a span:nth-child(3) {
+    width: 100%;
+    height: 3px;
+    background: white;
+  }
+  .social ul li a span:nth-child(1) {
+    top: 0;
+    left: 0;
+    transform-origin: right;
+  }
+  .social ul li a span:nth-child(3) {
+    bottom: 0;
+    left: 0;
+    transform-origin: left;
+  }
+  .social ul li a span:nth-child(2), .social ul li a span:nth-child(4) {
+    width: 3px;
+    height: 100%;
+    background: #404040;
+  }
+  .social ul li a span:nth-child(2) {
+    top: 0;
+    left: 0;
+    transform: scale(0);
+    transform-origin: bottom;
+  }
+  .social ul li a span:nth-child(4) {
+    top: 0;
+    right: 0;
+    transform: scale(0);
+    transform-origin: top;
+  }
+  .social ul li a:hover span:nth-child(1) {
+    transform: scaleX(0);
+    transform-origin: left;
+  }
+  .social ul li a:hover span:nth-child(3) {
+    transform: scaleX(0);
+    transform-origin: right;
+  }
+  .social ul li a:hover span:nth-child(2) {
+    transform: scale(1);
+    transform-origin: top;
+  }
+  .social ul li a:hover span:nth-child(4) {
+    transform: scale(1);
+    transform-origin: bottom;
+  }
+  .social ul li .facebook:hover {
+    color: #3b5998;
+  }
+  .social ul li .facebook:hover span {
+    background: #3b5998;
+  }
+  .social ul li .instagram:hover {
+    color: #c32aa3;
+  }
+  .social ul li .instagram:hover span {
+    background: #c32aa3;
+  }
+  .social ul li .linkedin:hover {
+    color: #0077b5;
+  }
+  .social ul li .linkedin:hover span {
+    background: #0077b5;
+  }
   .spacer1 {
     width: 100%;
     height: 13rem;
@@ -404,6 +604,106 @@
     font-size: 2.5rem;
     margin-left: 2rem;
   }
+  .social {
+    height: 8rem;
+    z-index: 1;
+    position: relative;
+  }
+  .social ul {
+    position: relative;
+    top: 130%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0;
+    padding: 0;
+    display: flex;
+  }
+  .social ul li {
+    list-style: none;
+  }
+  .social ul li a {
+    display: block;
+    position: relative;
+    width: 35px;
+    height: 35px;
+    line-height: 35px;
+    font-size: 15px;
+    text-align: center;
+    text-decoration: none;
+    color: white;
+    margin: 0 30px;
+    transition: 0.5s;
+  }
+  .social ul li a span {
+    position: absolute;
+    transition: transform 0.5s;
+  }
+  .social ul li a span:nth-child(1), .social ul li a span:nth-child(3) {
+    width: 100%;
+    height: 3px;
+    background: white;
+  }
+  .social ul li a span:nth-child(1) {
+    top: 0;
+    left: 0;
+    transform-origin: right;
+  }
+  .social ul li a span:nth-child(3) {
+    bottom: 0;
+    left: 0;
+    transform-origin: left;
+  }
+  .social ul li a span:nth-child(2), .social ul li a span:nth-child(4) {
+    width: 3px;
+    height: 100%;
+    background: #404040;
+  }
+  .social ul li a span:nth-child(2) {
+    top: 0;
+    left: 0;
+    transform: scale(0);
+    transform-origin: bottom;
+  }
+  .social ul li a span:nth-child(4) {
+    top: 0;
+    right: 0;
+    transform: scale(0);
+    transform-origin: top;
+  }
+  .social ul li a:hover span:nth-child(1) {
+    transform: scaleX(0);
+    transform-origin: left;
+  }
+  .social ul li a:hover span:nth-child(3) {
+    transform: scaleX(0);
+    transform-origin: right;
+  }
+  .social ul li a:hover span:nth-child(2) {
+    transform: scale(1);
+    transform-origin: top;
+  }
+  .social ul li a:hover span:nth-child(4) {
+    transform: scale(1);
+    transform-origin: bottom;
+  }
+  .social ul li .facebook:hover {
+    color: #3b5998;
+  }
+  .social ul li .facebook:hover span {
+    background: #3b5998;
+  }
+  .social ul li .instagram:hover {
+    color: #c32aa3;
+  }
+  .social ul li .instagram:hover span {
+    background: #c32aa3;
+  }
+  .social ul li .linkedin:hover {
+    color: #0077b5;
+  }
+  .social ul li .linkedin:hover span {
+    background: #0077b5;
+  }
   .spacer1 {
     width: 100%;
     height: 7rem;
@@ -512,6 +812,106 @@
     font-size: 2.5rem;
     margin-left: 2rem;
   }
+  .social {
+    height: 8rem;
+    z-index: 1;
+    position: relative;
+  }
+  .social ul {
+    position: relative;
+    top: 150%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0;
+    padding: 0;
+    display: flex;
+  }
+  .social ul li {
+    list-style: none;
+  }
+  .social ul li a {
+    display: block;
+    position: relative;
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    font-size: 20px;
+    text-align: center;
+    text-decoration: none;
+    color: white;
+    margin: 0 30px;
+    transition: 0.5s;
+  }
+  .social ul li a span {
+    position: absolute;
+    transition: transform 0.5s;
+  }
+  .social ul li a span:nth-child(1), .social ul li a span:nth-child(3) {
+    width: 100%;
+    height: 3px;
+    background: white;
+  }
+  .social ul li a span:nth-child(1) {
+    top: 0;
+    left: 0;
+    transform-origin: right;
+  }
+  .social ul li a span:nth-child(3) {
+    bottom: 0;
+    left: 0;
+    transform-origin: left;
+  }
+  .social ul li a span:nth-child(2), .social ul li a span:nth-child(4) {
+    width: 3px;
+    height: 100%;
+    background: #404040;
+  }
+  .social ul li a span:nth-child(2) {
+    top: 0;
+    left: 0;
+    transform: scale(0);
+    transform-origin: bottom;
+  }
+  .social ul li a span:nth-child(4) {
+    top: 0;
+    right: 0;
+    transform: scale(0);
+    transform-origin: top;
+  }
+  .social ul li a:hover span:nth-child(1) {
+    transform: scaleX(0);
+    transform-origin: left;
+  }
+  .social ul li a:hover span:nth-child(3) {
+    transform: scaleX(0);
+    transform-origin: right;
+  }
+  .social ul li a:hover span:nth-child(2) {
+    transform: scale(1);
+    transform-origin: top;
+  }
+  .social ul li a:hover span:nth-child(4) {
+    transform: scale(1);
+    transform-origin: bottom;
+  }
+  .social ul li .facebook:hover {
+    color: #3b5998;
+  }
+  .social ul li .facebook:hover span {
+    background: #3b5998;
+  }
+  .social ul li .instagram:hover {
+    color: #c32aa3;
+  }
+  .social ul li .instagram:hover span {
+    background: #c32aa3;
+  }
+  .social ul li .linkedin:hover {
+    color: #0077b5;
+  }
+  .social ul li .linkedin:hover span {
+    background: #0077b5;
+  }
 }
 @media (min-width: 835px) and (max-width: 1024px) {
   nav {
@@ -614,6 +1014,106 @@
     font-size: 2.5rem;
     margin-left: 2rem;
   }
+  .social {
+    height: 8rem;
+    z-index: 1;
+    position: relative;
+  }
+  .social ul {
+    position: relative;
+    top: 150%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0;
+    padding: 0;
+    display: flex;
+  }
+  .social ul li {
+    list-style: none;
+  }
+  .social ul li a {
+    display: block;
+    position: relative;
+    width: 70px;
+    height: 70px;
+    line-height: 70px;
+    font-size: 30px;
+    text-align: center;
+    text-decoration: none;
+    color: white;
+    margin: 0 30px;
+    transition: 0.5s;
+  }
+  .social ul li a span {
+    position: absolute;
+    transition: transform 0.5s;
+  }
+  .social ul li a span:nth-child(1), .social ul li a span:nth-child(3) {
+    width: 100%;
+    height: 3px;
+    background: white;
+  }
+  .social ul li a span:nth-child(1) {
+    top: 0;
+    left: 0;
+    transform-origin: right;
+  }
+  .social ul li a span:nth-child(3) {
+    bottom: 0;
+    left: 0;
+    transform-origin: left;
+  }
+  .social ul li a span:nth-child(2), .social ul li a span:nth-child(4) {
+    width: 3px;
+    height: 100%;
+    background: #404040;
+  }
+  .social ul li a span:nth-child(2) {
+    top: 0;
+    left: 0;
+    transform: scale(0);
+    transform-origin: bottom;
+  }
+  .social ul li a span:nth-child(4) {
+    top: 0;
+    right: 0;
+    transform: scale(0);
+    transform-origin: top;
+  }
+  .social ul li a:hover span:nth-child(1) {
+    transform: scaleX(0);
+    transform-origin: left;
+  }
+  .social ul li a:hover span:nth-child(3) {
+    transform: scaleX(0);
+    transform-origin: right;
+  }
+  .social ul li a:hover span:nth-child(2) {
+    transform: scale(1);
+    transform-origin: top;
+  }
+  .social ul li a:hover span:nth-child(4) {
+    transform: scale(1);
+    transform-origin: bottom;
+  }
+  .social ul li .facebook:hover {
+    color: #3b5998;
+  }
+  .social ul li .facebook:hover span {
+    background: #3b5998;
+  }
+  .social ul li .instagram:hover {
+    color: #c32aa3;
+  }
+  .social ul li .instagram:hover span {
+    background: #c32aa3;
+  }
+  .social ul li .linkedin:hover {
+    color: #0077b5;
+  }
+  .social ul li .linkedin:hover span {
+    background: #0077b5;
+  }
 }
 @media (min-width: 1025px) {
   nav {
@@ -713,5 +1213,105 @@
     font-weight: bolder;
     font-size: 2.5rem;
     margin-left: 2rem;
+  }
+  .social {
+    height: 8rem;
+    z-index: 1;
+    position: relative;
+  }
+  .social ul {
+    position: relative;
+    top: 150%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0;
+    padding: 0;
+    display: flex;
+  }
+  .social ul li {
+    list-style: none;
+  }
+  .social ul li a {
+    display: block;
+    position: relative;
+    width: 100px;
+    height: 100px;
+    line-height: 100px;
+    font-size: 50px;
+    text-align: center;
+    text-decoration: none;
+    color: white;
+    margin: 0 30px;
+    transition: 0.5s;
+  }
+  .social ul li a span {
+    position: absolute;
+    transition: transform 0.5s;
+  }
+  .social ul li a span:nth-child(1), .social ul li a span:nth-child(3) {
+    width: 100%;
+    height: 3px;
+    background: white;
+  }
+  .social ul li a span:nth-child(1) {
+    top: 0;
+    left: 0;
+    transform-origin: right;
+  }
+  .social ul li a span:nth-child(3) {
+    bottom: 0;
+    left: 0;
+    transform-origin: left;
+  }
+  .social ul li a span:nth-child(2), .social ul li a span:nth-child(4) {
+    width: 3px;
+    height: 100%;
+    background: #404040;
+  }
+  .social ul li a span:nth-child(2) {
+    top: 0;
+    left: 0;
+    transform: scale(0);
+    transform-origin: bottom;
+  }
+  .social ul li a span:nth-child(4) {
+    top: 0;
+    right: 0;
+    transform: scale(0);
+    transform-origin: top;
+  }
+  .social ul li a:hover span:nth-child(1) {
+    transform: scaleX(0);
+    transform-origin: left;
+  }
+  .social ul li a:hover span:nth-child(3) {
+    transform: scaleX(0);
+    transform-origin: right;
+  }
+  .social ul li a:hover span:nth-child(2) {
+    transform: scale(1);
+    transform-origin: top;
+  }
+  .social ul li a:hover span:nth-child(4) {
+    transform: scale(1);
+    transform-origin: bottom;
+  }
+  .social ul li .facebook:hover {
+    color: #3b5998;
+  }
+  .social ul li .facebook:hover span {
+    background: #3b5998;
+  }
+  .social ul li .instagram:hover {
+    color: #c32aa3;
+  }
+  .social ul li .instagram:hover span {
+    background: #c32aa3;
+  }
+  .social ul li .linkedin:hover {
+    color: #0077b5;
+  }
+  .social ul li .linkedin:hover span {
+    background: #0077b5;
   }
 }/*# sourceMappingURL=main.css.map */
