--- a/css/gallerie.css
+++ b/css/gallerie.css
@@ -10,25 +10,29 @@
   .gallery {
     padding: 0 0 4rem 0;
   }
+  h2 {
+    margin-top: 4rem;
+    font-size: 4rem;
+    text-align: center;
+  }
   .grid {
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
     margin-bottom: 2rem;
-    margin-top: 7rem;
   }
   .column {
     flex: 1;
-    min-width: calc(25% - 1rem); /* Each image will take up 25% of the container width minus the gap. */
+    min-width: calc(25% - 1rem);
   }
   .img-container {
     position: relative;
     width: 100%;
-    padding-bottom: 100%; /* Maintain a square aspect ratio */
+    padding-bottom: 100%;
     overflow: hidden;
-    border: 1px solid #ccc; /* This draws the separating lines between the images */
+    border: 1px solid #ccc;
   }
-  img {
+  .img-container img {
     position: absolute;
     top: 0;
     left: 0;
@@ -39,65 +43,60 @@
     transform: scale(1);
     transition: all 0.3s ease-in-out;
   }
-  img:hover {
+  .img-container img:hover {
     transform: scale(1.05);
   }
 }
 @media (min-width: 835px) and (max-width: 1024px) {
-  .img-container {
-    height: 400px;
+  .grid .column {
+    min-width: calc(33.33% - 1rem);
+    padding-bottom: 0.5rem;
   }
-  .image-text {
-    margin-top: 6rem;
-    margin-bottom: 1.5rem;
-  }
-  img {
-    height: 400px;
+  h2 {
+    text-align: center;
+    font-size: 3rem;
   }
 }
 @media (min-width: 770px) and (max-width: 834px) {
-  .img-container {
-    height: 350px;
+  .grid .column {
+    min-width: calc(50% - 1rem);
+    padding-bottom: 0.5rem;
   }
-  .image-text {
-    margin-top: 6rem;
-    margin-bottom: 1rem;
-  }
-  img {
-    height: 350px;
+  h2 {
+    text-align: center;
+    font-size: 2.5rem;
   }
 }
 @media (min-width: 577px) and (max-width: 769px) {
-  .img-container {
-    height: 300px;
+  .grid .column {
+    min-width: 100%;
+    padding-bottom: 0.5rem;
   }
-  .image-text {
-    margin-top: 5rem;
-    margin-bottom: 1rem;
-  }
-  img {
-    height: 300px;
+  h2 {
+    text-align: center;
+    font-size: 2rem;
+    margin-top: 2rem;
   }
 }
-@media (max-width: 576px) {
-  img:hover {
-    transform: none;
+@media (min-width: 491px) and (max-width: 576px) {
+  .grid .column {
+    min-width: 100%;
+    padding-bottom: 0.5rem;
   }
-  .img-container {
-    height: 250px;
+  h2 {
+    text-align: center;
+    font-size: 1.8rem;
+    margin-top: 1.5rem;
   }
-  .img-container:hover .img-content-hover {
-    display: none;
+}
+@media (min-width: 360px) and (max-width: 490px) {
+  .grid .column {
+    min-width: 100%;
+    padding-bottom: 0.5rem;
   }
-  .image-text {
-    margin-top: 4rem;
-    margin-bottom: 1rem;
-  }
-  img {
-    height: 250px;
-  }
-  .img-content {
-    display: block;
-    padding: 0.5rem 0;
+  h2 {
+    text-align: center;
+    font-size: 1.5rem;
+    margin-top: 1rem;
   }
 }/*# sourceMappingURL=gallerie.css.map */
