--- a/css/nav.css
+++ b/css/nav.css
@@ -127,7 +127,7 @@
   nav ul {
     list-style: none;
     display: flex;
-    position: relative;
+    position: fixed;
     justify-content: end;
     margin: 0;
     padding: 0;
@@ -162,7 +162,7 @@
   nav ul {
     list-style: none;
     display: flex;
-    position: relative;
+    position: fixed;
     justify-content: end;
     margin: 0;
     padding: 0;
@@ -197,7 +197,7 @@
   nav ul {
     list-style: none;
     display: flex;
-    position: relative;
+    position: fixed;
     justify-content: end;
     margin: 0;
     padding: 0;
