--- a/css/nav.scss
+++ b/css/nav.scss
@@ -153,7 +153,7 @@
         ul {
             list-style: none;
             display: flex;
-            position: relative;
+            position: fixed;
             justify-content: end;
             margin: 0;
             padding: 0;
@@ -202,7 +202,7 @@
         ul {
             list-style: none;
             display: flex;
-            position: relative;
+            position: fixed;
             justify-content: end;
             margin: 0;
             padding: 0;
@@ -251,7 +251,7 @@
         ul {
             list-style: none;
             display: flex;
-            position: relative;
+            position: fixed;
             justify-content: end;
             margin: 0;
             padding: 0;
