--- a/css/main.scss
+++ b/css/main.scss
@@ -71,9 +71,9 @@
             justify-content: center;
             align-content: center;
             width: 100%;
-            padding-left: 2rem;
-            padding-right: 2rem;
-            // padding-top: 1rem;
+            padding-left: 2.5rem;
+            padding-right: 2.5rem;
+            padding-top: 1rem;
             height: 10rem;
             margin-top: 2rem;
             margin-bottom: 12rem;
